Clock scrambles corrected, made larger, and (hopefully) more readable.

--- a/inc/scramble.css
+++ b/inc/scramble.css
@@ -413,6 +413,7 @@ h1 {
 
 .scramble_table td.scramble_clock {
   font-family: monospace;
+  font-size: 140%;
 }
 
 
